test/valid-files/useless_parens.in.pcse
OUTPUT (3)
OUTPUT (3+3)
