test/invalid-files/non_func.in.pcse
DECLARE i: INTEGER
OUTPUT i()
